<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/forg_pass_submit"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forg_pass_btn_submit"
                android:textColor="@color/btn_text"
                app:backgroundTint="@color/status_bar_orange"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/forg_pass_cancel"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forg_pass_btn_Cancel"
                android:textColor="@color/btn_text"
                app:backgroundTint="@color/status_bar_orange"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>